Update List all Blogs endpoint to respond blog header only